--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-end",
-  "homepage": "https://sriramsanthosh.github.io/weatherapp",
+  "homepage": "https://sriramsanthosh.github.io/weather-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
